Sema: SE-0110 tuple splatting should not implode argument list with varargs

Fixes <https://bugs.swift.org/browse/SR-9470>.